# spotforecast2

./: .gitignore  .nojekyll  .releaserc.json  404.html  BRANCH_PROTECTION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DESKTOP_GUIDE.md  README.md  RELEASE_MANAGEMENT.md  REUSE.toml  SECURITY.md  WORKFLOWS_SETUP.md  _quarto.yml  check_results.py  index.html  index.qmd  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  robots.txt  search.json  sitemap.xml  test_predictions_diff.py
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: ci.yml  (+3 more)
bart26i/: .gitignore  _quarto.yml  bart26i.bib  index.qmd
docs/: entsoe.html  entsoe.md  hooks.py  index.md  pre-render.py  quartodoc_build.py  tasks.html  tasks.md
entsoe/: index.html
examples/: safety_critical_forecasting.py
scripts/: compare_predictions.py  n_to_1_task.py
search/: search_index.json
tasks/: index.html  task_demo.py  task_n_to_1.py  task_n_to_1_dataframe.py  task_n_to_1_with_covariates.py  task_n_to_1_with_covariates_and_dataframe.py
tests/: test_agg_predictor.py  test_apply_imputation.py  test_cache_home.py  test_clean_dry_run.py  test_clean_task.py  test_config_entsoe.py  test_convert_search_space.py  test_curate_data.py  test_cv_ts.py  test_cv_ts_sklearn.py  test_docs_backtesting_examples.py  test_docs_entsoe_examples.py  test_docs_model_persistence_examples.py  test_docs_model_training_intro.py  test_docs_onestepahead.py  test_docs_onestepaheadfold_examples.py  test_docs_outliers_examples.py  test_docs_probabilistic_forecasting.py  test_docs_safety_critical.py  test_docs_spotoptim_intro.py  test_docs_task_consistency.py  test_docs_time_series_visualization_examples.py  test_docs_timeseriesfold.py  test_docs_timeseriesfold_examples.py  test_docstring_examples_plotter.py  test_exog_import.py  test_fetch_data.py  test_forecaster_equivalent_date.py  test_forecaster_recursive_import.py  test_forecaster_utils.py  test_generate_holiday.py  test_get_missing_weights.py  test_imports.py  test_imputation.py  test_imputation_custom_weights.py  test_imputation_weight_function.py  test_linear_interpolate_import.py  test_manager_models_full.py  test_manager_plotter.py  test_model_persistence.py  (+38 more)
(+183 files in other folders)
