[project]
name = "spotforecast2"
version = "0.2.35"
description = "Forecasting with spot"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
authors = [
    { name = "bartzbeielstein", email = "32470350+bartzbeielstein@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "entsoe-py>=0.7.10",
    "feature-engine>=1.9.3",
    "flake8>=7.3.0",
    "holidays>=0.90",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "spotforecast2-safe>=0.2.1",
    "spotoptim>=0.0.160",
    "tqdm>=4.67.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cloudpickle>=3.1.2",
    "mkdocs-macros-plugin>=1.5.0",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.2",
    "mkdocstrings-python>=2.0.1",
    "safety>=3.0.0",
    "bandit>=1.8.0",
]

[project.scripts]
spotforecast2-entsoe = "spotforecast2.tasks.task_entsoe:main"
spotforecast-demo = "spotforecast2.tasks.task_demo:main"
spotforecast-n2o1 = "spotforecast2.tasks.task_n_to_1:main"
spotforecast-n2o1-df = "spotforecast2.tasks.task_n_to_1_dataframe:main"
spotforecast-n2o1-cov = "spotforecast2.tasks.task_n_to_1_with_covariates:main"
spotforecast-n2o1-cov-df = "spotforecast2.tasks.task_n_to_1_with_covariates_and_dataframe:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
spotforecast2-safe = { path = "../spotforecast2-safe", editable = true }
